force-app/main/default/objects/BirthdayReminderSettings__c/BirthdayReminderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Birthday Reminder Settings</label>
    <description>Configuration settings for the Birthday Reminder application</description>
</CustomObject>