force-app/main/default/objects/BirthdayReminderSettings__c/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <description>ID of the email template to use for birthday reminders</description>
    <inlineHelpText>Enter the ID of the email template to use for birthday reminder notifications</inlineHelpText>
    <label>Email Template ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>