force-app/main/default/objects/BirthdayReminderSettings__c/fields/EnableChatterPosts__c.field-meta.xml
<CustomField>
    <fullName>EnableChatterPosts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables Chatter posts for birthday reminders</description>
    <inlineHelpText>Check to enable Chatter posts for birthday reminders</inlineHelpText>
    <label>Enable Chatter Posts</label>
    <type>Checkbox</type>
</CustomField>