force-app/main/default/objects/BirthdayReminderSettings__c/fields/EnableEmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>EnableEmailNotifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables email notification for birthday reminders</description>
    <inlineHelpText>Check to enable email notifications for birthday reminders</inlineHelpText>
    <label>Enable Email Notifications</label>
    <type>Checkbox</type>
</CustomField>