force-app/main/default/objects/BirthdayReminderSettings__c/fields/RecipientEmails__c.field-meta.xml
<CustomField>
    <fullName>RecipientEmails__c</fullName>
    <description>Comma-separated list of email addresses to receive birthday reminders</description>
    <inlineHelpText>Enter a comma-separated list of email addresses that should receive birthday reminder notifications</inlineHelpText>
    <label>Recipient Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>