force-app/main/default/objects/BirthdayReminderSettings__c/fields/ReminderDays__c.field-meta.xml
<CustomField>
    <fullName>ReminderDays__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days before a birthday to send a reminder</description>
    <inlineHelpText>Set the number of days in advance that reminders should be sent for upcoming birthdays</inlineHelpText>
    <label>Reminder Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>